--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/algonquin.jpg
+    - images/question_mark.png
+    - images/light_bulb.png
+    - images/stop.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
