--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,18 @@ flutter:
     - images/question_mark.png
     - images/light_bulb.png
     - images/stop.png
+    - images/beef.jpg
+    - images/brownie.jpg
+    - images/chicken.jpg
+    - images/cookie.jpg
+    - images/icecream.jpg
+    - images/main.jpg
+    - images/pie.jpg
+    - images/pork.jpg
+    - images/pot.jpg
+    - images/salad.jpg
+    - images/seafood.jpg
+    - images/side.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
